@@ -150,6 +150,7 @@ Version 1.11.0-svn:
      view scrolling has been locked, and false otherwise
    * Added == operator for (private, on-map, recall) lua proxy units,
      checking for unit identity
+   * Added wesnoth.get_villages() function
  * Multiplayer:
    * A New Land:
      * Made it so that the "Elvish Shaman" option in the elvish unit selection
